--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "spendex-test",
+    "name": "Spendex Test",
     "slug": "spendex-test",
     "version": "1.0.0",
     "orientation": "portrait",
